add basic scoreboard

--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -19,5 +19,10 @@
 	"teamManagement": "Gestion d'équipe",
 	"teamToJoin": "Équipe à rejoindre",
 	"submit": "Soumettre",
-	"challenge.solves": "Réussi {number} fois"
+	"challenge.solves": "Réussi {number} fois",
+	"scoreboard.rank": "Position",
+	"scoreboard.affiliation": "Affiliation",
+	"scoreboard.score": "Score",
+	"scoreboard.lastUpdate": "Dernière mise à jour",
+	"scoreboard.team": "Équipe"
 }
