- Use VueX to store the current user (not plugged with backend yet) - Add user mixin to have access to the connected user

--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -11,6 +11,7 @@
 	"signup": "Inscription",
 	"nav.connectionInscription": "Connexion/inscription",
 	"nav.manageTeam": "Gérer son équipe",
+	"nav.signout": "Déconnexion",
 	"create": "Créer",
 	"join": "Joindre",
 	"createTeam": "Créer l'équipe",
