Filter challenges by track

--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -25,5 +25,6 @@
 	"scoreboard.affiliation": "Affiliation",
 	"scoreboard.score": "Score",
 	"scoreboard.lastUpdate": "Dernière mise à jour",
-	"scoreboard.team": "Équipe"
+  "scoreboard.team": "Équipe",
+  "all": "Tous"
 }
