--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -1,30 +1,32 @@
 {
-	"projectName": "JDIS",
-	"title.challenges": "Défis",
-	"title.scoreboard": "Classement",
-	"title.home": "Accueil",
-	"form.username": "Nom d'utilisateur",
-	"form.password": "Mot de passe",
-	"form.passwordConfirmation": "Mot de passe (confirmation)",
-	"form.email": "Courriel",
-	"signin": "Connexion",
-	"signup": "Inscription",
-	"nav.connectionInscription": "Connexion/inscription",
-	"nav.manageTeam": "Gérer son équipe",
-	"nav.signout": "Déconnexion",
-	"create": "Créer",
-	"join": "Joindre",
-	"createTeam": "Créer l'équipe",
-	"joinTeam": "Rejoindre l'équipe",
-	"teamName": "Nom d'équipe",
-	"teamManagement": "Gestion d'équipe",
-	"teamToJoin": "Équipe à rejoindre",
-	"submit": "Soumettre",
-	"challenge.solves": "Réussi {number} fois",
-	"scoreboard.rank": "Position",
-	"scoreboard.affiliation": "Affiliation",
-	"scoreboard.score": "Score",
-	"scoreboard.lastUpdate": "Dernière mise à jour",
+  "projectName": "JDIS",
+  "title.challenges": "Défis",
+  "title.scoreboard": "Classement",
+  "title.home": "Accueil",
+  "form.username": "Nom d'utilisateur",
+  "form.password": "Mot de passe",
+  "form.passwordConfirmation": "Mot de passe (confirmation)",
+  "form.email": "Courriel",
+  "signin": "Connexion",
+  "signup": "Inscription",
+  "nav.connectionInscription": "Connexion/inscription",
+  "nav.manageTeam": "Gérer son équipe",
+  "nav.signout": "Déconnexion",
+  "create": "Créer",
+  "join": "Joindre",
+  "createTeam": "Créer l'équipe",
+  "joinTeam": "Rejoindre l'équipe",
+  "teamName": "Nom d'équipe",
+  "teamManagement": "Gestion d'équipe",
+  "teamToJoin": "Équipe à rejoindre",
+  "submit": "Soumettre",
+  "challenge.solves": "Réussi {number} fois",
+  "challenge.isCorrect": "Bonne réponse!",
+  "challenge.isWrong": "Mauvaise réponse",
+  "scoreboard.rank": "Position",
+  "scoreboard.affiliation": "Affiliation",
+  "scoreboard.score": "Score",
+  "scoreboard.lastUpdate": "Dernière mise à jour",
   "scoreboard.team": "Équipe",
   "all": "Tous"
 }
