- Use VueX to store the current user (not plugged with backend yet) - Add user mixin to have access to the connected user

--- a/frontend/user/src/locales/fr.json
+++ b/frontend/user/src/locales/fr.json
@@ -8,7 +8,9 @@
   "form.passwordConfirmation": "Mot de passe (confirmation)",
   "form.email": "Courriel",
   "signin": "Connexion",
+  "signin.invalidCreds": "Combinaison email/mot de passe invalide",
   "signup": "Inscription",
+  "signup.error": "Erreur lors de l'inscription: {error}",
   "nav.connectionInscription": "Connexion/inscription",
   "nav.manageTeam": "Gérer son équipe",
   "nav.signout": "Déconnexion",
