- Use VueX to store the current user (not plugged with backend yet) - Add user mixin to have access to the connected user

--- a/frontend/admin/src/locales/en.json
+++ b/frontend/admin/src/locales/en.json
@@ -3,8 +3,11 @@
   "event": "Event",
   "event.admins": "Administrators",
   "event.general": "General",
+  "event.name": "Event Name",
   "event.new": "New event",
   "event.theme": "Theme",
+  "id": "ID",
   "logout": "Logout",
+  "name": "Name",
   "participants": "Participants"
 }
