Rename more user stuff to participant, fixes

--- a/frontend/user/src/locales/fr.json
+++ b/frontend/user/src/locales/fr.json
@@ -37,15 +37,15 @@
   "team.sendJoinRequestSent": "Requête pour joindre l'équipe envoyée!",
   "team.requests": "Demandes d'adhésion à l'équipe",
   "team.members": "Membres",
-  "team.userAccepted": "{user} fait maintenant partie de l'équipe.",
+  "team.participantAccepted": "{participant} fait maintenant partie de l'équipe.",
   "team.acceptError": "Erreur lors de l'acceptation de la demande d'adhésion: {error}",
-  "team.userRejected": "Demande d'adhésion à l'équipe de {user} a été refusée.",
+  "team.participantRejected": "Demande d'adhésion à l'équipe de {participant} a été refusée.",
   "team.rejectError": "Erreur lors du rejet de l'invitation: {error}",
   "team.makeCaptain": "Ajouter comme capitaine",
   "team.removeCaptain": "Retirer du rôle de capitaine",
-  "team.roleChanged": "{user} a changé de rôle.",
+  "team.roleChanged": "{participant} a changé de rôle.",
   "team.roleChangeError": "Erreur lors du changement de rôle: {error}",
-  "team.memberKicked": "{user} a été expulsé de l'équipe",
+  "team.memberKicked": "{participant} a été expulsé de l'équipe",
   "team.kickError": "Erreur lors de l'expulsion de l'utilisateur: {error}",
   "team.leaveTeam": "Quitter l'équipe",
   "team.leftTeam": "Équipe quittée",
