- Use VueX to store the current user (not plugged with backend yet) - Add user mixin to have access to the connected user

--- a/frontend/admin/src/locales/en.json
+++ b/frontend/admin/src/locales/en.json
@@ -1,5 +1,6 @@
 {
   "challenges": "Challenges",
+  "challenges.empty": "No challenge existing for this event",
   "event": "Event",
   "event.admins": "Administrators",
   "event.general": "General",
@@ -9,5 +10,9 @@
   "id": "ID",
   "logout": "Logout",
   "name": "Name",
-  "participants": "Participants"
+  "new": "New",
+  "participants": "Participants",
+  "points": "Points",
+  "track": "Track",
+  "visible": "Visible"
 }
