actually merge by fixing migrations use authenticators

--- a/frontend/user/src/locales/fr.json
+++ b/frontend/user/src/locales/fr.json
@@ -30,5 +30,28 @@
   "scoreboard.score": "Score",
   "scoreboard.lastUpdate": "Dernière mise à jour",
   "scoreboard.team": "Équipe",
-  "all": "Tous"
+  "all": "Tous",
+  "team.creationSuccessful": "L'équipe {team} a été créée",
+  "team.creationError": "Erreur lors de la création d'équipe: {error}",
+  "team.sendJoinRequestError": "Erreur lors de la demande pour rejoindre une équipe: {error}",
+  "team.sendJoinRequestSent": "Requête pour joindre l'équipe envoyée!",
+  "team.requests": "Demandes d'adhésion à l'équipe",
+  "team.members": "Membres",
+  "team.userAccepted": "{user} fait maintenant partie de l'équipe.",
+  "team.acceptError": "Erreur lors de l'acceptation de la demande d'adhésion: {error}",
+  "team.userRejected": "Demande d'adhésion à l'équipe de {user} a été refusée.",
+  "team.rejectError": "Erreur lors du rejet de l'invitation: {error}",
+  "team.makeCaptain": "Ajouter comme capitaine",
+  "team.removeCaptain": "Retirer du rôle de capitaine",
+  "team.roleChanged": "{user} a changé de rôle.",
+  "team.roleChangeError": "Erreur lors du changement de rôle: {error}",
+  "team.memberKicked": "{user} a été expulsé de l'équipe",
+  "team.kickError": "Erreur lors de l'expulsion de l'utilisateur: {error}",
+  "team.leaveTeam": "Quitter l'équipe",
+  "team.leftTeam": "Équipe quittée",
+  "team.leaveError": "Erreur lors de la tentative de quitter l'équipe: {error}",
+  "team.requestStatus": "Statut de la demande d'adhésion",
+  "team.requestCancelError": "Erreur lors de l'annulation de la demande: {error}",
+  "team.requestCancelled": "Requête annulée",
+  "team.cancelRequest": "Annuler la demande"
 }
