- Use VueX to store the current user (not plugged with backend yet) - Add user mixin to have access to the connected user

--- a/frontend/admin/src/locales/en.json
+++ b/frontend/admin/src/locales/en.json
@@ -1,18 +1,41 @@
 {
+  "cancel": "Cancel",
+  "challenge.description": "Description",
+  "challenge.flag": "Flag",
+  "challenge.get.error": "Could not get challenge",
+  "challenge.get.error.details": "Could not get challenge: {error}",
+  "challenge.name": "Name",
+  "challenge.points": "Points",
   "challenges": "Challenges",
+  "challenges.create": "Create Challenge",
+  "challenges.delete.success": "Challenge deleted",
+  "challenges.delete.error": "Could not delete challenge",
+  "challenges.delete.error.details": "Could not delete challenge: {error}",
+  "challenges.edit": "Edit Challenge",
   "challenges.empty": "No challenge existing for this event",
+  "challenges.get.error": "Could not get challenge list",
+  "challenges.get.error.details": "Could not get challenge list: {error}",
+  "challenges.hidden.success": "Challenge {name} is now @.lower:hidden",
+  "challenges.update.error": "Could not update the challenge",
+  "challenges.update.error.details": "Could not update the challenge: {error}",
+  "challenges.visible.success": "Challenge {name} is now @.lower:visible",
   "event": "Event",
   "event.admins": "Administrators",
   "event.general": "General",
   "event.name": "Event Name",
-  "event.new": "New event",
+  "event.new": "New Event",
   "event.theme": "Theme",
+  "hidden": "Hidden",
   "id": "ID",
   "logout": "Logout",
   "name": "Name",
   "new": "New",
   "participants": "Participants",
   "points": "Points",
+  "save": "Save",
+  "save.success": "Save Successful",
+  "save.error": "Could not save",
+  "save.error.details": "Could not save: {error}",
   "track": "Track",
   "visible": "Visible"
 }
