--- a/frontend/admin/src/locales/fr.json
+++ b/frontend/admin/src/locales/fr.json
@@ -1,18 +1,41 @@
 {
+  "cancel": "Annuler",
+  "challenge.description": "Description",
+  "challenge.flag": "Réponse",
+  "challenge.get.error": "Impossible de récupérer le défi",
+  "challenge.get.error.details": "Impossible de récupérer le défi : {error}",
+  "challenge.name": "Nom",
+  "challenge.points": "Points",
   "challenges": "Défis",
+  "challenges.create": "Créer un défi",
+  "challenges.delete.success": "Défi supprimé",
+  "challenges.delete.error": "Erreur lors de la suppression du défi",
+  "challenges.delete.error.details": "Erreur lors de la suppression du défi : {error}",
+  "challenges.edit": "Éditer le défi",
   "challenges.empty": "Aucun défi n'a été créé pour cette compétition",
+  "challenges.get.error": "Impossible de récupérer la liste des défis",
+  "challenges.get.error.details": "Impossible de récupérer la liste des défis : {error}",
+  "challenges.update.error": "Erreur lors de la mise à jour du défi",
+  "challenges.update.error.details": "Erreur lors de la mise à jour du défi : {error}",
+  "challenges.hidden.success": "Défi {name} est maintenant @.lower:hidden",
+  "challenges.visible.success": "Défi {name} est maintenant @.lower:visible",
   "event": "Compétition",
   "event.admins": "Administrateurs",
   "event.general": "Général",
   "event.name": "Nom de la compétition",
   "event.new": "Nouvelle compétition",
   "event.theme": "Thème",
+  "hidden": "Caché",
   "id": "ID",
   "logout": "Déconnexion",
   "name": "Nom",
   "new": "Nouveau",
   "participants": "Participants",
   "points": "Points",
+  "save": "Sauvegarder",
+  "save.success": "Sauvegarde réussie",
+  "save.error": "Erreur lors de la sauvegarde",
+  "save.error.details": "Erreur lors de la sauvegarde : {error}",
   "track": "Catégorie",
   "visible": "Visible"
 }
