actually merge by fixing migrations use authenticators

--- a/frontend/user/src/locales/fr.json
+++ b/frontend/user/src/locales/fr.json
@@ -28,8 +28,11 @@
   "scoreboard.rank": "Position",
   "scoreboard.affiliation": "Affiliation",
   "scoreboard.score": "Score",
-  "scoreboard.lastUpdate": "Dernière mise à jour",
+  "scoreboard.lastUpdate": "Dernière soumission valide",
   "scoreboard.team": "Équipe",
+  "scoreboard.solvedChallenges": "# de défis résolus",
+  "scoreboard.errorWhileFetching": "Erreur lors de la récupération du classement: {error}",
+  "scoreboard.autoreload": "Recharger automatiquement",
   "all": "Tous",
   "team.creationSuccessful": "L'équipe {team} a été créée",
   "team.creationError": "Erreur lors de la création d'équipe: {error}",
