--- a/frontend/user/src/locales/fr.json
+++ b/frontend/user/src/locales/fr.json
@@ -30,6 +30,7 @@
   "scoreboard.score": "Score",
   "scoreboard.lastUpdate": "Dernière soumission valide",
   "scoreboard.team": "Équipe",
+  "scoreboard.participant": "Participant",
   "scoreboard.solvedChallenges": "# de défis résolus",
   "scoreboard.errorWhileFetching": "Erreur lors de la récupération du classement: {error}",
   "scoreboard.autoreload": "Recharger automatiquement",
