Fix docker-compose + remove migration container (merge with backend)

--- a/frontend/user/src/locales/en.json
+++ b/frontend/user/src/locales/en.json
@@ -1,3 +1,66 @@
 {
-	"message": "hello i18n !!"
-}
+	"projectName": "JDIS",
+	"title.challenges": "Challenges",
+	"title.scoreboard": "Scoreboard",
+	"title.home": "Home",
+	"title.eventSelection": "Choose an event",
+	"form.username": "Username",
+	"form.password": "Password",
+	"form.passwordConfirmation": "Password (confirmation)",
+	"form.email": "email",
+	"signin": "Sign in",
+	"signin.invalidCreds": "Invalid email/password combination",
+	"signup": "Sign up",
+	"signup.error": "Error during sign up: {error}",
+	"nav.connectionInscription": "Sign in - Sign up",
+	"nav.manageTeam": "Manage your team",
+	"nav.signout": "Logout",
+	"create": "Create",
+	"join": "Join",
+	"createTeam": "Create team",
+	"joinTeam": "Join team",
+	"teamName": "Team name",
+	"teamManagement": "Manage team",
+	"teamToJoin": "Team to join",
+	"submit": "Submit",
+	"challenge.solves": "Solved {number} times",
+	"challenge.isCorrect": "Correct flag!",
+	"challenge.isWrong": "Wrong flag",
+	"scoreboard.rank": "Rank",
+	"scoreboard.affiliation": "Affiliation",
+	"scoreboard.score": "Score",
+	"scoreboard.lastUpdate": "Last valid submission",
+	"scoreboard.team": "Team",
+	"scoreboard.participant": "Participant",
+	"scoreboard.solvedChallenges": "# solved challenges",
+	"scoreboard.errorWhileFetching": "Error while fetching scoreboard: {error}",
+	"scoreboard.autoreload": "Automatic reload",
+	"all": "All",
+	"team.creationSuccessful": "Team {team} has been created",
+	"team.creationError": "Error while creating team: {error}",
+	"team.sendJoinRequestError": "Error while sending a team join request: {error}",
+	"team.sendJoinRequestSent": "Team join request sent!",
+	"team.requests": "Team join requests",
+	"team.members": "Members",
+	"team.participantAccepted": "{participant} is now part of the team.",
+	"team.acceptError": "Error while accepting team join request: {error}",
+	"team.participantRejected": "Team join request for {participant} has been rejected.",
+	"team.rejectError": "Error while rejecting team join request: {error}",
+	"team.makeCaptain": "Add as a captain",
+	"team.removeCaptain": "Remove as a captain",
+	"team.roleChanged": "{participant} changed role.",
+	"team.roleChangeError": "Error while changing role: {error}",
+	"team.memberKicked": "{participant} has been kicked off the team",
+	"team.kickError": "Error while kicking player: {error}",
+	"team.leaveTeam": "Leave team",
+	"team.leftTeam": "Team left",
+	"team.leaveError": "Error while leaving team: {error}",
+	"team.requestStatus": "Team join request status",
+	"team.requestCancelError": "Error while cancelling team join request: {error}",
+	"team.requestCancelled": "Request cancelled",
+	"challenge.submissionError": "Error while submitting flag: {error}",
+	"challenge.oldSubmissions": "Past submissions",
+	"team.cancelRequest": "Cancel request",
+	"eventSelection.chooseEvent": "Choose an event:"
+  }
+  
