--- a/frontend/admin/src/locales/fr.json
+++ b/frontend/admin/src/locales/fr.json
@@ -2,6 +2,7 @@
   "cancel": "Annuler",
   "challenge.description": "Description",
   "challenge.flag": "Réponse",
+  "challenge.files": "Fichiers",
   "challenge.get.error": "Impossible de récupérer le défi",
   "challenge.get.error.details": "Impossible de récupérer le défi : {error}",
   "challenge.name": "Nom",
@@ -24,10 +25,23 @@
   "create": "Créer",
   "event": "Compétition",
   "event.admins": "Administrateurs",
+  "event.customcss": "CSS personnalisé",
+  "event.flagformat": "Format des réponses",
   "event.general": "Général",
+  "event.homepage": "Contenu de la page d'accueil",
+  "event.homepage.tooltip": "Peut être formatté en utilisant les balises Markdown",
+  "event.logo": "Logo",
   "event.name": "Nom de la compétition",
   "event.new": "Nouvelle compétition",
+  "event.open": "Ouverte",
+  "event.open.tooltip": "Indique si les participants peuvent consulter les défis et soumettre des réponses",
+  "event.state": "État",
+  "event.teamsize": "Nombre de participants par équipe",
   "event.theme": "Thème",
+  "event.url": "Url",
+  "event.visible": "Visible",
+  "event.visible.tooltip": "Indique si la compétition est accessible",
+  "fileupload": "Cliquer pour télécharger ou déposer ici",
   "hidden": "Caché",
   "id": "ID",
   "logout": "Déconnexion",
