--- a/frontend/admin/src/locales/en.json
+++ b/frontend/admin/src/locales/en.json
@@ -2,6 +2,7 @@
   "cancel": "Cancel",
   "challenge.description": "Description",
   "challenge.flag": "Flag",
+  "challenge.files": "Files",
   "challenge.get.error": "Could not get challenge",
   "challenge.get.error.details": "Could not get challenge: {error}",
   "challenge.name": "Name",
@@ -24,10 +25,23 @@
   "create": "Create",
   "event": "Event",
   "event.admins": "Administrators",
+  "event.customcss": "Custom CSS",
+  "event.flagformat": "Flag Format",
   "event.general": "General",
+  "event.homepage": "Home Page Content",
+  "event.homepage.tooltip": "Format with Markdown",
+  "event.logo": "Logo",
   "event.name": "Event Name",
   "event.new": "New Event",
+  "event.open": "Open",
+  "event.open.tooltip": "Open means participants can view challenges and submit flags",
+  "event.state": "State",
+  "event.teamsize": "Participants per team",
   "event.theme": "Theme",
+  "event.url": "Url",
+  "event.visible": "Visible",
+  "event.visible.tooltip": "Visible means the event can be accessed",
+  "fileupload": "Click to upload a file or drag here",
   "hidden": "Hidden",
   "id": "ID",
   "logout": "Logout",
