rename from flags r us to flaggr (rip)

--- a/frontend/admin/src/locales/fr.json
+++ b/frontend/admin/src/locales/fr.json
@@ -1,5 +1,5 @@
 {
-  "projectName": "Flags R US",
+  "projectName": "Flaggr",
   "cancel": "Annuler",
   "challenge.description": "Description",
   "challenge.flag": "Réponse",
