--- a/frontend/admin/src/locales/en.json
+++ b/frontend/admin/src/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "projectName": "Flags R US",
+  "projectName": "Flaggr",
   "cancel": "Cancel",
   "challenge.description": "Description",
   "challenge.flag": "Flag",
