--- a/frontend/admin/src/locales/en.json
+++ b/frontend/admin/src/locales/en.json
@@ -63,6 +63,7 @@
   "signin": "Sign in",
   "login.error": "Error during login: {error}",
   "pickEvent": "Choose an event",
-  "logout.error": "Error during logout: {error}"
+  "logout.error": "Error during logout: {error}",
+  "categories.get.error": "Error while fetching categories: {error}"
 
 }
