Renamed Sign in to log in

--- a/frontend/user/src/locales/en.json
+++ b/frontend/user/src/locales/en.json
@@ -8,11 +8,11 @@
 	"form.password": "Password",
 	"form.passwordConfirmation": "Password (confirmation)",
 	"form.email": "email",
-	"signin": "Sign in",
+	"signin": "Log in",
 	"signin.invalidCreds": "Invalid email/password combination",
 	"signup": "Sign up",
 	"signup.error": "Error during sign up: {error}",
-	"nav.connectionInscription": "Sign in - Sign up",
+	"nav.connectionInscription": "Log in - Sign up",
 	"nav.manageTeam": "Manage your team",
 	"nav.signout": "Logout",
 	"create": "Create",
