Fully plug Create/Update challenges, challs list with backend (#17)
* add dockerignore for files we dont want in the container

* No route for login, instead its the home page when not connected.

* navigation works again (plug event id in it)

* plug create challenge with backend

* - Plug delete, category, points and visibility in challenges page
- Can now edit and create challenges
- rename track to category in challenge model frontend to fit backend

* remove clickable from Challenges.vue since not implemented

* rename from flags r us to flaggr (rip)

* fetch categories in frontend + fix ordering bug in backend

* fix redirects on create or update challenge

* fix lint

* fix tests

* optimize CI

* Update flag.ts

--- a/frontend/admin/src/locales/en.json
+++ b/frontend/admin/src/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "projectName": "Flags R US",
+  "projectName": "Flaggr",
   "cancel": "Cancel",
   "challenge.description": "Description",
   "challenge.flag": "Flag",
@@ -63,6 +63,7 @@
   "signin": "Sign in",
   "login.error": "Error during login: {error}",
   "pickEvent": "Choose an event",
-  "logout.error": "Error during logout: {error}"
+  "logout.error": "Error during logout: {error}",
+  "categories.get.error": "Error while fetching categories: {error}"
 
 }
