--- a/frontend/admin/src/locales/fr.json
+++ b/frontend/admin/src/locales/fr.json
@@ -1,5 +1,5 @@
 {
-  "projectName": "Flags R US",
+  "projectName": "Flaggr",
   "cancel": "Annuler",
   "challenge.description": "Description",
   "challenge.flag": "Réponse",
@@ -63,6 +63,7 @@
   "signin": "Connexion",
   "login.error": "Erreur pendant la connexion: {error}",
   "pickEvent": "Choisir un événement",
-  "logout.error": "Erreur durant la déconnexion: {error}"
+  "logout.error": "Erreur durant la déconnexion: {error}",
+  "categories.get.error": "Erreur lors de la récupération des catégories: {error}"
 
 }
