--- a/frontend/admin/src/locales/fr.json
+++ b/frontend/admin/src/locales/fr.json
@@ -69,7 +69,8 @@
   "preview": "Aperçu",
   "event.frontPage": "Contenu de la page d'accueil (markdown)",
   "event.updated": "Événement mis à jour!",
-  "event.update.error": "Erreur lors de la mise à jour de l'événement: {error}"
+  "event.update.error": "Erreur lors de la mise à jour de l'événement: {error}",
+  "createEvent.error": "Erreur lors de la création d'un événement: {error}"
 
 
 }
