--- a/frontend/admin/src/locales/fr.json
+++ b/frontend/admin/src/locales/fr.json
@@ -71,7 +71,9 @@
   "event.updated": "Événement mis à jour!",
   "event.update.error": "Erreur lors de la mise à jour de l'événement: {error}",
   "createEvent.error": "Erreur lors de la création d'un événement: {error}",
-  "category.create.error": "Erreur lors de la création d'une catégorie: {error}"
+  "category.create.error": "Erreur lors de la création d'une catégorie: {error}",
+  "event.teams": "Équipes",
+  "event.teams.tooltip": "Si l'événement est en équipe (sinon seul)."
 
 
 }
