Change project name in frontend user and add source link

--- a/frontend/user/src/locales/en.json
+++ b/frontend/user/src/locales/en.json
@@ -1,5 +1,5 @@
 {
-	"projectName": "JDIS",
+	"projectName": "Flaggr",
 	"title.challenges": "Challenges",
 	"title.scoreboard": "Scoreboard",
 	"title.home": "Home",
