--- a/frontend/user/src/locales/fr.json
+++ b/frontend/user/src/locales/fr.json
@@ -1,5 +1,5 @@
 {
-  "projectName": "JDIS",
+  "projectName": "Flaggr",
   "title.challenges": "Défis",
   "title.scoreboard": "Classement",
   "title.home": "Accueil",
