Add participant list in admin

--- a/frontend/admin/src/locales/en.json
+++ b/frontend/admin/src/locales/en.json
@@ -80,6 +80,6 @@
   "pageTitle.challenges": "Challenges - Admin",
   "pageTitle.edit-challenges": "Edit a challenge - Admin",
   "pageTitle.new-challenges": "Create a challenge - Admin",
-  "pageTitle.participants": "Participants - Admin"
-
+  "pageTitle.participants": "Participants - Admin",
+  "participants.get.error": "Error while fetching participants: {error}"
 }
