--- a/frontend/admin/src/locales/fr.json
+++ b/frontend/admin/src/locales/fr.json
@@ -72,6 +72,7 @@
   "event.update.error": "Erreur lors de la mise à jour de l'événement: {error}",
   "createEvent.error": "Erreur lors de la création d'un événement: {error}",
   "category.create.error": "Erreur lors de la création d'une catégorie: {error}",
+  "participants.get.error": "Erreur lors de la récupération des participants: {error}",
   "event.teams": "Équipes",
   "event.teams.tooltip": "Si l'événement est en équipe (sinon seul).",
   "pageTitle.home": "Accueil - Administration",
